--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "cypressgettext",
+  "name": "cypress_custom_logcommand",
   "version": "1.0.0",
-  "description": "This repo contains automation test on lambdaTest teaching how to get text element using cypress.",
+  "description": "This repo contains automation test on how to improve custom log command in Cypress",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "getText",
-    "get",
-    "text",
+    "log",
+    "custom log",
+    "log command",
     "cypress",
     "lmabdaTest",
     "testing"
