--- a/lambdatest-config.json
+++ b/lambdatest-config.json
@@ -1,22 +1,16 @@
 {
   "lambdatest_auth": {
-    "username": "<user.name>",
-    "access_key": "<access_key>"
+    "username": "",
+    "access_key": ""
   },
   "browsers": [
     {
       "browser": "Chrome",
       "platform": "Windows 10",
       "versions": ["latest-1"]
-    },
-    {
-      "browser": "Firefox",
-      "platform": "Windows 10",
-      "versions": ["latest-1"]
     }
   ],
   "run_settings": {
-    "cypress_config_file": "cypress.json",
     "reporter_config_file": "base_reporter_config.json",
     "build_name": "build-name",
     "parallels": 1,
