--- a/lambdatest-config.json
+++ b/lambdatest-config.json
@@ -1,7 +1,7 @@
 {
   "lambdatest_auth": {
-    "username": "",
-    "access_key": ""
+    "username": "umavictor11",
+    "access_key": "YXuyD18sjLAx7G8FO3cwMSlMdUaRNiYlKi9hMElPnKqK9RzWyR"
   },
   "browsers": [
     {
